--- a/hw8/css/style.css
+++ b/hw8/css/style.css
@@ -78,6 +78,7 @@ td img {
     margin-left: auto;
     position: relative;
     height: 58px;
+    border-style: solid;
 }
 
 #letter_rack img { /* letter tile image */
