--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -913,7 +913,7 @@ Home Section style
 ==================*/
 
 .home{
-    background: url(../images/homebg.jpg) no-repeat center center;
+    background: url(../images/1000004694.JPEG) no-repeat center center;
     background-size: cover;
     position: relative;
     height: 1000px;
