--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -914,7 +914,7 @@ Home Section style
 
 .home{
     background: url(../images/1000004694.JPEG) no-repeat center center;
-    background-size: cover;
+    background-size: contain;
     position: relative;
     height: 1000px;
 }
