--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,7 +916,7 @@ Home Section style
     background: url(../images/1000004694.JPEG) no-repeat center center;
     background-size: contain;
     position: relative;
-    background-color: #FFB168;
+    background-color: #d6964f;
     background-position: center;
     background-repeat: no-repeat;
     height: 1000px;
