--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,8 +916,8 @@ Home Section style
     background: url(../images/1000004694.JPEG) no-repeat center center;
     background-size: contain;
     position: relative;
-    background-color: #d5b386;
-    background-position: center;
+    background-color: #4a4439;
+    background-position: 20%;
     background-repeat: no-repeat;
     height: 1000px;
 }
